--- a/ProyectoCampingParty/src/main/java/VISTA/VistaCliente.form
+++ b/ProyectoCampingParty/src/main/java/VISTA/VistaCliente.form
@@ -159,7 +159,7 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="jLabel3">
           <Properties>
-            <Property name="text" type="java.lang.String" value="FeCHA"/>
+            <Property name="text" type="java.lang.String" value="FECHA"/>
           </Properties>
         </Component>
         <Component class="javax.swing.JButton" name="modReserva">
