--- a/ProyectoCampingParty/src/main/java/VISTA/ClienteSignOn.form
+++ b/ProyectoCampingParty/src/main/java/VISTA/ClienteSignOn.form
@@ -265,16 +265,13 @@
                                           <Component id="jLabel10" min="-2" pref="118" max="-2" attributes="0"/>
                                           <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
                                       </Group>
-                                      <Group type="103" alignment="0" groupAlignment="0" attributes="0">
-                                          <Component id="jTextField8" alignment="0" min="-2" pref="151" max="-2" attributes="0"/>
-                                          <Group type="102" alignment="1" attributes="0">
-                                              <Component id="jLabel11" min="-2" pref="118" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
+                                      <Component id="jTextField8" alignment="0" min="-2" pref="151" max="-2" attributes="0"/>
+                                      <Group type="102" attributes="0">
+                                          <Group type="103" groupAlignment="0" attributes="0">
+                                              <Component id="jLabel11" alignment="1" min="-2" pref="118" max="-2" attributes="0"/>
+                                              <Component id="jLabel16" alignment="0" min="-2" pref="118" max="-2" attributes="0"/>
                                           </Group>
-                                          <Group type="102" alignment="0" attributes="0">
-                                              <Component id="jLabel16" min="-2" pref="118" max="-2" attributes="0"/>
-                                              <EmptySpace min="-2" pref="33" max="-2" attributes="0"/>
-                                          </Group>
+                                          <EmptySpace min="33" pref="33" max="-2" attributes="0"/>
                                       </Group>
                                   </Group>
                               </Group>
@@ -492,9 +489,6 @@
               </Properties>
             </Component>
             <Component class="javax.swing.JCheckBox" name="jCheckBox1">
-              <Properties>
-                <Property name="actionCommand" type="java.lang.String" value=""/>
-              </Properties>
               <Events>
                 <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="jCheckBox1ActionPerformed"/>
               </Events>
