--- a/ProyectoCampingParty/src/main/java/VISTA/ActividadSeleccionada.form
+++ b/ProyectoCampingParty/src/main/java/VISTA/ActividadSeleccionada.form
@@ -164,12 +164,11 @@
         <Component class="javax.swing.JList" name="jList1">
           <Properties>
             <Property name="model" type="javax.swing.ListModel" editor="org.netbeans.modules.form.editors2.ListModelEditor">
-              <StringArray count="5">
-                <StringItem index="0" value="Item 1"/>
-                <StringItem index="1" value="Item 2"/>
-                <StringItem index="2" value="Item 3"/>
-                <StringItem index="3" value="Item 4"/>
-                <StringItem index="4" value="Item 5"/>
+              <StringArray count="4">
+                <StringItem index="0" value="Asistente1"/>
+                <StringItem index="1" value="Asistente2"/>
+                <StringItem index="2" value="Asistente3"/>
+                <StringItem index="3" value="Asistente4"/>
               </StringArray>
             </Property>
           </Properties>
